--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -502,6 +502,15 @@ def _get_cudnn_deterministic() -> _bool: ...  # THPModule_deterministicCuDNN
 def _set_cudnn_deterministic(arg: _bool) -> None: ...  # THPModule_setDeterministicCuDNN
 def _get_deterministic_algorithms() -> _bool: ...  # THPModule_deterministicAlgorithms
 def _set_deterministic_algorithms(arg: _bool) -> None: ...  # THPModule_setDeterministicAlgorithms
+def _get_heterogeneous_deterministic_algorithms() -> _bool: ...  # THPModule_heterogeneousDeterministicAlgorithms
+def _set_heterogeneous_deterministic_algorithms(arg: _bool) -> None: ...  # THPModule_setHeterogeneousDeterministicAlgorithms
+def _get_deterministic_dataloader_workers() -> _bool: ...  # THPModule_deterministicDataloaderWorkers
+def _set_deterministic_dataloader_workers(arg: _bool) -> None: ...  # THPModule_setDeterministicDataloaderWorkers
+
+# hack
+def _get_gemm_algo() -> _int: ...  # THPModule_gemmAlgo
+def _set_gemm_algo(arg: _int) -> None: ...  # THPModule_setGemmAlgo
+
 def _get_cudnn_allow_tf32() -> _bool: ...  # THPModule_allowTF32CuDNN
 def _set_cudnn_allow_tf32(arg: _bool) -> None: ...  # THPModule_setAllowTF32CuDNN
 def _get_cublas_allow_tf32() -> _bool: ...  # THPModule_allowTF32CuBLAS
